helper.php => helpers.php 로 변경

--- a/composer.json
+++ b/composer.json
@@ -15,7 +15,7 @@
             "Lomi525\\FormRedirect\\": "src/"
         },
         "files":[
-          "src/helper.php"
+          "src/helpers.php"
         ]
     }
 }
